--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <groupId>com.jrummy.apps</groupId>
     <artifactId>dialogs-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
 
     <name>EasyDialog (Parent)</name>
     <description>EasyDialog</description>
